Update: click and grab on marquee. Bug: gap occurs at the end after grabbing and scrolling towards left.

--- a/netlify/functions/preview/src/sass/utilities/_container.scss
+++ b/netlify/functions/preview/src/sass/utilities/_container.scss
@@ -64,6 +64,13 @@
 		}
 	}
 
+	&.ultra-narrow {
+		--width: var(--ultra-narrow-width);
+		@include mqmax(small) {
+			--width: var(--ultra-wide-width);
+		}
+	}
+
 	&.border-bottom {
 		border-bottom: 1px solid hsl(var(--clr-neutral-200));
 	}
